# soluai

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  Trunk.toml  index.html
client/assets/: websockets.js
client/src/: app.rs  main.rs
client/src/components/: camera_frame.rs  header.rs  mod.rs  nav_bar.rs
client/src/pages/: home.rs
client/styles/: main.sass
server/: Cargo.toml  index.html  main.py  requirements.txt  styles.css
server/src/: main.rs  services.rs  yolo.rs
src/: main.rs  services.rs  yolo.rs
