[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.8.0"
actix-ws = "0.3.0"
bytes = "1.7.1"
futures-util = "0.3.30"
image = "0.25.2"
ndarray = "0.15.6"
ort = { version = "2.0.0-rc.1", features = ["cuda", "openvino"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.124"
